# mousebrain-anno-skill

./: .gitignore  CITATION.cff  LICENSE  README.md  data_sources.yaml  pyproject.toml
docs/: benchmark_protocol.md  data_licenses.md  methods.md
markers/: mouse_brain_major_markers.tsv
model_cards/: allen_consensus_wmb_20251031.md  wmb_nature_2023.md
notebooks/: 01_basic_annotation.ipynb  02_cross_validation.ipynb  03_spatial_annotation.ipynb  04_disease_annotation.ipynb
src/mbanno/: __init__.py  benchmark.py  celltypist_runner.py  cli.py  confidence.py  consensus.py  io.py  mapmycells.py  marker_rules.py  qc.py  references.py  report.py  scanvi.py  singler_runner.py
tests/: test_mbanno.py
workflows/: annotate_query.smk  benchmark_public.smk  download_references.smk
