[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbanno"
version = "0.1.0"
description = "A reproducible consensus annotation framework for mouse whole-brain single-cell and spatial transcriptomics using Allen/BICCN reference taxonomies."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "huangyanling", email = "huangyanling@zju.edu.cn"}
]
keywords = [
    "single-cell", "transcriptomics", "mouse-brain", "annotation",
    "Allen-Brain-Atlas", "BICCN", "bioinformatics", "spatial-transcriptomics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "scanpy>=1.9.6",
    "anndata>=0.10.0",
    "scvi-tools>=1.0.4",
    "scrublet>=0.2.3",
    "celltypist>=1.6.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "h5py>=3.9.0",
    "boto3>=1.28.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.4",
    "black>=23.7",
    "ruff>=0.1.0",
]
benchmark = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "tabulate>=0.9",
]
report = [
    "jinja2>=3.1",
    "plotly>=5.16",
]
spatial = [
    "squidpy>=1.4",
    "spatialdata>=0.1",
]

[project.scripts]
mbanno = "mbanno.cli:main"

[project.urls]
Homepage = "https://github.com/jackson666888999/mousebrain-anno-skill"
Documentation = "https://github.com/jackson666888999/mousebrain-anno-skill/blob/main/README.md"
Repository = "https://github.com/jackson666888999/mousebrain-anno-skill"
Issues = "https://github.com/jackson666888999/mousebrain-anno-skill/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
